<resources>
    <string name="app_name">GastoInteligente</string>
    <string name="title_login">Ingresar a GastoInteligente</string>
    <string name="hint_email">Correo Electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_login">Ingresar</string>
    <string name="txt_go_to_register">¿No tienes cuenta? Regístrate aquí</string>
    <string name="title_register">Registro</string>
    <string name="hint_name">Nombre Completo</string>
    <string name="btn_register">Registrar</string>
    <string name="msg_register_success">Registro exitoso</string>
</resources>